--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,5 +7,19 @@
     <string name="pause">||</string>
 
     <string name="start">Start</string>
+    <string name="title_activity_jukebox_main">Another Jukebox ain</string>
+
+    <!-- menu items -->
+    <string name="app_settings">Settings</string>
+    <string name="app_info_title">Info</string>
+    <string name="app_copyright_title">Copyright</string>
+
+    <!-- titles of main view pager tabs -->
+    <string name="tab_title_artists">Artists</string>
+    <string name="tab_title_albums">Albums</string>
+    <string name="tab_title_player">Player</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 </resources>
