--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">Another Jukebox</string>
 
-    <string name="back"><![CDATA[<]]></string>
+    <string name="back"><![CDATA[>]]></string>
     <string name="rewind"><![CDATA[<<]]></string>
     <string name="forward"><![CDATA[>>]]></string>
     <string name="pause">||</string>
@@ -17,9 +17,7 @@
     <!-- titles of main view pager tabs -->
     <string name="tab_title_artists">Artists</string>
     <string name="tab_title_albums">Albums</string>
+    <string name="tab_title_songs">Songs</string>
     <string name="tab_title_player">Player</string>
-
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Start</string>
 
 </resources>
